# quadruped_locomotion

balance_controller/: CMakeLists.txt  controller_plugin_descriptions.xml  package.xml
balance_controller/config/: control.yaml  controller_gains_static_walk.yaml
balance_controller/include/balance_controller/contact_force_distribution/: ContactForceDistribution.hpp  ContactJointTorqueDistribution.hpp
balance_controller/include/balance_controller/ros_controler/: balance_controllerConfig.h  configure_change_controller.hpp  robot_state_gazebo_ros_control_plugin.hpp  ros_balance_controller.hpp  single_leg_controller.hpp  static_walk_controller.hpp  walk_forward_controller.hpp
balance_controller/include/base_motion_planning/: base_motion_planning.h
balance_controller/include/quadruped_model_CppAD/: Quadruped_Kin_CppAD.h  Quadruped_optimization.h
balance_controller/launch/: balance_controller_manager.launch  balance_controller_static_walk.launch
balance_controller/src/base_motion_planning/: base_motion_planning.cpp
balance_controller/src/contact_force_distribution/: ContactForceDistribution.cpp  ContactJointTorqueDistribution.cpp
balance_controller/src/motion_control/: VirtualModelController.cpp
balance_controller/src/quadruped_model_CPPad/: Quadruped_Kin_CppAD.cpp
balance_controller/src/ros_controller/: balance_controller_manager.cpp  configure_change_controller.cpp  robot_state_gazebo_ros_control_plugin.cpp  ros_balance_controller.cpp  single_leg_controller.cpp  static_walk_controller.cpp  walk_forward_controller.cpp
balance_controller/test/: BaseForceEstimate.cpp  Quadruped_model_cppad_test.cpp  base_motion_planning_node.cpp  ifopt_test.cpp  ifopt_test_execuable.cpp  optimization_server.cpp  quadruped_nonlinear_exe.cpp  read_rosbag_file_test.cpp  test_force_distribution_kp.cpp
balance_controller/test/include/: quadruped_nonlinear_test.hpp
balance_controller/test/lib/: quadruped_nonlinear_test.cpp
control_panel/include/rqt_control_panel_plugin/: rqt_control_panel_plugin_widget.h
control_panel/src/rqt_control_panel_plugin/: rqt_control_panel_plugin_widget.cpp
control_panel/ui/rqt_control_panel_plugin/: rqt_control_panel_plugin_widget.ui
free_gait_core/src/pose_optimization/: PoseOptimizationGeometric.cpp
free_gait_msgs/: CMakeLists.txt
free_gait_msgs/srv/: optimize.srv
free_gait_ros/src/: StateRosPublisher.cpp
free_gait_ros/test/: action_server_test.cpp
qp_solver/src/: quadraticproblemsolver.cpp
quadruped_model/: CMakeLists.txt  package.xml  readme.md
quadruped_model/exe/: 15_walk_and_kneel_down.cpp  Across_the_ravines.cpp  bodymovesplanning_v1.cpp  bodymovesplanning_v2.cpp  catch_a_ball.cpp  catch_a_ball_fore_legs.cpp  kinematicsTest.cpp  rolling_walk_to_stairs.cpp  rolling_walk_to_stairs_v2.cpp  test.cpp  throw_a_ball.cpp  walk_state_to_upstairs.cpp  walk_to_stairs.cpp  x_to_stairs_v2.cpp  x_to_stairs_v4.cpp
quadruped_model/include/quadruped_model/: QuadrupedModel.hpp  quadruped_dynamics.hpp
quadruped_model/src/: QuadrupedModel.cpp  bodymovesplanning.cpp  bodymovesplanning_v1.cpp  bodymovesplanning_v2.cpp  catch_a_ball.cpp  kinematicsTest.cpp  kneel_down.cpp  left_walk_tostairs.cpp  quadruped_dynamics.cpp  quadruped_state.cpp  quadrupedkinematics.cpp  test.cpp  withwheelmotion.cpp  x_to_stairs.cpp  x_to_stairs_v3.cpp  x_to_stairs_v6.cpp  x_to_stairs_v7.cpp
quadruped_model/urdf/: quadruped_model.urdf
quadruped_odom/: CMakeLists.txt  package.xml
